--- a/season/css/season.css
+++ b/season/css/season.css
@@ -59,10 +59,15 @@ p.to-season-details-p1 {
 	font-family: 'Francois One', sans-serif;
 }
 .season-container {
-/*	height: 500px;*/
-	width: 100%;
-	background-color: #650303;;
-
+	background-color: #fff;
+	background: url('../img/s1bg.jpg');
+    width: 100%;
+    height: calc(100% - 1.71875rem);
+    overflow: hidden;
+	padding-top: 1em;
+	background-attachment: fixed;
+	background-repeat: no-repeat;
+	background-size: cover;
 }
 .season-box {
 	height: 100px;
@@ -77,7 +82,7 @@ p.to-season-details-p1 {
 }*/
 .card {
 	border-radius: 13px;
-    opacity: .8;
+    opacity: .9;
 }
 .card .card-image img {
 	height: 200px;
